เจม ปรับปรุง sprint 1
