# backend/docs/swagger.json
@@ -3097,6 +3097,9 @@
                 "doctorordersheetID": {
                     "type": "integer"
                 },
+                "identitycard": {
+                    "type": "string"
+                },
                 "note": {
                     "type": "string"
                 },
@@ -3106,7 +3109,7 @@
                 "personnelID": {
                     "type": "integer"
                 },
-                "times": {
+                "phone": {
                     "type": "string"
                 }
             }
@@ -3266,6 +3269,10 @@
         "ent.Checksymptom": {
             "type": "object",
             "properties": {
+                "Identitycard": {
+                    "description": "Identitycard holds the value of the \"Identitycard\" field.",
+                    "type": "string"
+                },
                 "date": {
                     "description": "Date holds the value of the \"date\" field.",
                     "type": "string"
@@ -3283,8 +3290,8 @@
                     "description": "Note holds the value of the \"note\" field.",
                     "type": "string"
                 },
-                "times": {
-                    "description": "Times holds the value of the \"times\" field.",
+                "phone": {
+                    "description": "Phone holds the value of the \"phone\" field.",
                     "type": "string"
                 }
             }
